--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,26 +11,45 @@ website:
   title: "SAIL @ UNC"
   favicon: "favicon.html"
   navbar:
+    logo: imgs/SAIL LOGO 4-01.png
+    logo-alt: "SAIL Logo"
     left:
-      - href: index.qmd
-        text: "About"
-      - href: team.qmd
-        text: "Team"
-      - href: events.qmd
-        text: "Events"
-      - href: projects.qmd
-        text: "Projects"
-      - href: apply.qmd
-        text: "Apply"
-      - href: contact.qmd
-        text: "Contact"
-        
+      - text: "About"
+        href: index.qmd
+      - text: "Team"
+        href: team.qmd
+      - text: "Events"
+        href: events.qmd
+      - text: "Projects"
+        href: projects.qmd
+      - text: "Apply"
+        href: apply.qmd
+      - text: "Contact"
+        href: contact.qmd
+    background: "primary"
+    type: "dark"
 
 format:
   html:
-    theme: cosmo
+    theme: litera
     css: styles.css
     toc: true
+    toc-location: right
+    number-sections: false
+    code-fold: false
+    code-tools: false
+    code-link: false
+    fig-cap-location: margin
+    fig-dpi: 300
+    fig-format: png
+    fig-width: 8
+    fig-height: 6
+    fig-align: center
+    link-external-newwindow: true
+    link-external-icon: true
+    html-math-method: katex
+    include-in-header: header.html
+    page-layout: full
 
 editor: visual
 
